# Ellisa-Bot

./: .gitignore  main.py  pyproject.toml  requirements.txt  util.py  webserver.py
cogs/: api.py  emoji.py  fun.py  help.py  images.py  linux.py  misc.py  mod.py  music.py  sysadmin.py  util.py
