[tool.poetry]
name = "discord-bot-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
argparse = "^1.4.0"
requests = "^2.27.1"
random-dog = "^1.0.2"
dadjokes = "^1.3.2"
python-xlib = "^0.31"
Pillow = "^9.0.0"
youtube_dl = "^2021.12.17"
PyNaCl = "^1.5.0"
PyQRCode = "^1.2.1"
pypng = "^0.0.21"
IMDbPY = "^2021.4.18"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
